cabal-version: >= 1.6
name:          sstable
version:       1.0
build-type:    Simple
license:       BSD3
license-file:  LICENSE
author:        marius a. eriksen
category:      Data
synopsis:      SSTables in Haskell
maintainer:    marius a. eriksen
copyright:     (c) 2010 marius a. eriksen

library
  build-depends: base == 4.*, containers >= 0.2, 
                 bytestring >= 0.9, binary >= 0.5, 
                 deepseq >= 1.1
  exposed-modules:
    Data.SSTable
